# sovereign-utqc

./: .gitignore  AGENTS.md  AGENT_FARM_BLUEPRINT.md  EPISODE_02.md  LICENSE  README.md  fib.nb.json  omega-field.mjs
.github/: CODEOWNERS  FUNDING.yml
.github/workflows/: omega-field.yml  orbital-pages.yml
bob-reasoning-engine/: INCOMPLETE_UNIVERSE.md  README.md  TRS.md  wire.mjs
bob-reasoning-engine/apl/: IterationCount.apl  MetaResonanceBlock.apl  SacredGeometry.apl
bob-reasoning-engine/lean/: IncompleteUniverse.lean  MetaResonanceBlock.lean  ResonancePipeline.lean  TrustKernel.lean
bob-reasoning-engine/lean/metatron/: GrandUnified.lean
bob-reasoning-engine/rust/: Cargo.toml
bob-reasoning-engine/rust/src/: meta_resonance.rs
bob-reasoning-engine/src/: backtick-shell.mjs  index.mjs  metatron-logic.mjs  reasoning-engine.mjs  roget-source.mjs  trace.mjs
bobs-games/: README.html  README.md
docs/: index.html  mesh.json
errant/: README.md  interpreter.mjs  opcodes.mjs  test.mjs  typing.pl
errant/llm/: SOVEREIGN-LLM.md  errant-ggml.hs  package.json  runtime.mjs  tensor-flow.pl  tensor-ops.wit  test.mjs  worm-seal.mjs
errant/runtime/: Makefile  errant.c  errant.h
metamine/: README.md  TECHNICAL.md  bridge.mjs  cli.mjs  code-art.mjs  curator.mjs  glitch-renderer.mjs  interpreter.mjs  metatron-grid.mjs  package.json  seal.mjs  viewer.html
orbital-trust-deed/: README.md
orbital-trust-deed/config/: config.exs
orbital-trust-deed/docs/: index.html  mesh.json
orbital-trust-deed/lib/orbital_trust_deed/: application.ex
orbital-trust-deed/lib/orbital_trust_deed/sources/: celes_trak.ex  n2yo.ex
orbital-trust-deed/lib/orbital_trust_deed/worm/: chain.ex
orbital-trust-deed/lib/orbital_trust_deed_web/live/: dashboard_live.ex
orbital-trust-deed/priv/static/css/: orbital.css
orbital-trust-deed/priv/static/js/: earth_view.js
paper/: PAPER.md  ZENODO.md
snakltalk/: IMPLEMENTATION.md  SNAKLTALK.md  snakltalk.st
sovereign-addr/: Cargo.toml
sovereign-addr/src/: address.rs  canonical.rs  lib.rs  seal.rs
sovereign-adr/: Cargo.toml
sovereign-adr/src/: adr.rs  graph.rs  lib.rs
sovereign-agt/: Cargo.toml
sovereign-agt/src/: identity.rs  lib.rs  policy.rs  sandbox.rs
sovereign-clojure/: deps.edn
sovereign-clojure/src/sovereign/: core.clj  resonance.clj
sovereign-compiler/: Cargo.toml
sovereign-compiler/src/: codegen.rs  lib.rs  parser.rs  token.rs
sovereign-f1/: Cargo.toml
sovereign-f1/src/: field.rs  hodge.rs  lib.rs  square.rs
sovereign-goldilocks/src/: lattice.rs  seal.rs
sovereign-llm/: Cargo.toml
sovereign-llm/src/: lib.rs  model.rs  tokenizer.rs  train.rs
sovereign-multiplicity/: Cargo.toml
sovereign-multiplicity/src/: lib.rs  proof.rs  theorem.rs  verify.rs
sovereign-pirtm/: Cargo.toml
sovereign-pirtm/src/: evolve.rs  lib.rs  prime.rs  seal.rs  tensor.rs
sovereign-prism/: Cargo.toml
sovereign-prism/src/: block.rs  lib.rs  pow.rs  seal.rs
sovereign-router/: Cargo.toml
sovereign-router/src/: agent.rs  lib.rs  route.rs  score.rs
sovereign-ruby/lib/: orchestrator.rb
sovereign-uor/: Cargo.toml
sovereign-uor/src/: lib.rs  object.rs  schema.rs
sovereign-utqc/: Cargo.toml  NON_RECURSIVE_SOVEREIGN_COMPUTE_THEOREM.md  README.md  deny.toml
sovereign-utqc/crates/sovereign-bench/: Cargo.toml
sovereign-utqc/crates/sovereign-bench/benches/: field_ops.rs
sovereign-utqc/crates/sovereign-boundary-lattice/: Cargo.toml
sovereign-utqc/crates/sovereign-boundary-lattice/src/: lib.rs
sovereign-utqc/crates/sovereign-cli/: Cargo.toml
sovereign-utqc/crates/sovereign-cli/src/: lib.rs
sovereign-utqc/crates/sovereign-covenant/: Cargo.toml
sovereign-utqc/crates/sovereign-covenant/src/: lib.rs
sovereign-utqc/crates/sovereign-field-simd/: Cargo.toml
sovereign-utqc/crates/sovereign-field-simd/src/: lib.rs
sovereign-utqc/crates/sovereign-hologram-runtime/: Cargo.toml
sovereign-utqc/crates/sovereign-hologram-runtime/src/: lib.rs
sovereign-utqc/crates/sovereign-phdae/src/: lib.rs
sovereign-utqc/crates/sovereign-pirtm/: Cargo.toml
sovereign-utqc/crates/sovereign-pirtm/src/: lib.rs
sovereign-utqc/crates/sovereign-poly/: Cargo.toml
sovereign-utqc/crates/sovereign-poly/src/: lib.rs
sovereign-utqc/crates/sovereign-prime-mask/: Cargo.toml
sovereign-utqc/crates/sovereign-prime-mask/src/: lib.rs
sovereign-utqc/crates/sovereign-resonance-word/: Cargo.toml
sovereign-utqc/crates/sovereign-resonance-word/src/: lib.rs
sovereign-utqc/crates/sovereign-wasm/: Cargo.toml
sovereign-utqc/crates/sovereign-wasm/src/: lib.rs
sovereign-utqc/crates/utqc-agent/: Cargo.toml
sovereign-utqc/crates/utqc-agent/src/: lib.rs
sovereign-utqc/crates/utqc-bdd/: Cargo.toml
sovereign-utqc/crates/utqc-bdd/src/: lib.rs
sovereign-utqc/crates/utqc-core/: Cargo.toml
sovereign-utqc/crates/utqc-core/src/: lib.rs
sovereign-utqc/crates/utqc-coxeter/: Cargo.toml
sovereign-utqc/crates/utqc-coxeter/src/: lib.rs
sovereign-utqc/crates/utqc-goldilocks/: Cargo.toml
sovereign-utqc/crates/utqc-goldilocks/src/: lib.rs
sovereign-utqc/crates/utqc-linear/: Cargo.toml
sovereign-utqc/crates/utqc-linear/src/: lib.rs
sovereign-utqc/crates/utqc-paper/: Cargo.toml
sovereign-utqc/crates/utqc-paper/src/: lib.rs
sovereign-utqc/crates/utqc-quantum/: Cargo.toml
sovereign-utqc/crates/utqc-quantum/src/: lib.rs
sovereign-utqc/crates/utqc-worm/: Cargo.toml
sovereign-utqc/crates/utqc-worm/src/: lib.rs
sovereign-utqc/src/: gate.rs  lib.rs  qubit.rs  topology.rs
sovereign-utqc/tests/: Cargo.toml
sovereign-utqc/tests/cucumber/: main.rs  pipeline.feature
sovereign-zbit/: Cargo.toml
sovereign-zbit/src/: block.rs  hash.rs  lib.rs
