[package]
name = "sovereign-addr"
version = "0.1.0"
edition = "2021"
authors = ["SnapKitty Collective"]
description = "Sovereign ADDR — Chain-agnostic canonical content addressing. SnapKitty lore."
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
serde_json = "1.0"
