[package]
name = "sovereign-adr"
version = "0.1.0"
edition = "2021"
authors = ["SnapKitty Collective"]
description = "Sovereign ADR Kernel — Architecture Decision Records govern the rule graph. SnapKitty lore."
license = "MIT OR Apache-2.0"
repository = "https://github.com/SNAPKITTYWEST/SNAPKITTYWEST"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
