[package]
name = "sovereign-compiler"
version = "0.1.0"
edition = "2021"
authors = ["SnapKitty Collective"]
description = "Sovereign Compiler — PIRTM-lang compiler with governance-as-compilation. SnapKitty lore."
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
