[package]
name = "utqc-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
utqc-core = { path = "../../crates/utqc-core" }
utqc-goldilocks = { path = "../../crates/utqc-goldilocks" }
utqc-linear = { path = "../../crates/utqc-linear" }
utqc-quantum = { path = "../../crates/utqc-quantum" }
utqc-bdd = { path = "../../crates/utqc-bdd" }
utqc-worm = { path = "../../crates/utqc-worm" }
utqc-agent = { path = "../../crates/utqc-agent" }
utqc-paper = { path = "../../crates/utqc-paper" }
cucumber = "0.21"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
