[package]
name = "sovereign-bench"
version.workspace = true
edition.workspace = true
description = "Criterion benchmarks for sovereign compute"
license.workspace = true

[dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
sovereign-field-simd.workspace = true

[[bench]]
name = "field_ops"
harness = false

[lints]
workspace = true
