[package]
name = "sovereign-field-simd"
version.workspace = true
edition.workspace = true
description = "SIMD-accelerated Goldilocks field with SSE2/AVX2 feature gates"
license.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true

[features]
default = ["scalar"]
simd = []
scalar = []

[lints]
workspace = true
