[package]
name = "sovereign-pirtm"
version.workspace = true
edition.workspace = true
description = "PIRTM compiler IR — Prime-Indexed Recursive Tensor Mathematics"
license.workspace = true

[dependencies]
utqc-core.workspace = true
serde.workspace = true
thiserror.workspace = true

[lints]
workspace = true
