[package]
name = "sovereign-resonance-word"
version.workspace = true
edition.workspace = true
description = "Resonance Word: 7-bit class + 57-bit payload"
license.workspace = true

[dependencies]
sovereign-field-simd.workspace = true
serde.workspace = true

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
