[package]
name = "sovereign-wasm"
version.workspace = true
edition.workspace = true
description = "WASM bindings for sovereign compute"
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde.workspace = true
serde_json.workspace = true

# Override workspace deny-all for WASM FFI (unsafe + no_mangle required)
[lints.rust]
unsafe_code = "allow"
missing_docs = "allow"
unreachable_pub = "allow"

[lints.clippy]
all = "allow"
