[package]
name = "utqc-coxeter"
version.workspace = true
edition.workspace = true
description = "Coxeter group and octonion math for topological structure"
license.workspace = true

[dependencies]
utqc-core.workspace = true
serde.workspace = true
thiserror.workspace = true

[lints]
workspace = true
