[package]
name = "utqc-paper"
version.workspace = true
edition.workspace = true
description = "LaTeX theorem export"
license.workspace = true

[dependencies]
utqc-core.workspace = true
utqc-worm.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true

[lints]
workspace = true
