[package]
name = "utqc-quantum"
version.workspace = true
edition.workspace = true
description = "Quantum algorithms — QFT, Grover, Shor, QPE"
license.workspace = true

[dependencies]
utqc-core.workspace = true
utqc-goldilocks.workspace = true
serde.workspace = true
thiserror.workspace = true
rand.workspace = true

[lints]
workspace = true
