[package]
name = "utqc-worm"
version.workspace = true
edition.workspace = true
description = "WORM-sealed immutable artifact chains"
license.workspace = true

[dependencies]
utqc-core.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true
thiserror.workspace = true

[lints]
workspace = true
